# simulation-based-graph-inference

./: .gitignore  .pre-commit-config.yaml  Makefile  README.rst  beaver.py  conf.py  dodo.py  generate_stub.py  pyproject.toml  pyrightconfig.json  pytest.ini  recipe.py  requirements.in  requirements.txt  setup.cfg  setup.py  test_requirements.in  test_requirements.txt
.github/workflows/: main.yml
docs/: convert.rst  generators.rst  graph.rst  models.rst
include/: generators.hpp  graph.hpp
notebooks/: illustration.md  prl.mplstyle
simulation_based_graph_inference/: __init__.py  config.py  convert.pyx  data.py  generators.pxd  generators.pyx  graph.pxd  graph.pyx  models.py  util.py
simulation_based_graph_inference/generators/: __init__.py  _generators.pyx  attachment.py  copy.py  duplication_divergence.py  geometric.py  random_attachment.py  redirection.py  web.py
simulation_based_graph_inference/libcpp/: random.pxd
simulation_based_graph_inference/scripts/: generate_data.py  infer_latent_space_params.py  infer_tree_kernel.py  profile.py  sinm2022.py  sinm2022_data.py  sinm2022_train.py  train_nn.py  util.py
src/simulation_based_graph_inference/: __init__.py  config.py  data.py  models.py  util.py
tests/: conftest.py  test_convert.py  test_data.py  test_generators.py  test_graph.py  test_models.py  test_simulation_based_graph_inference.py  test_torch_geometric.py  test_util.py
tests/scripts/: test_generate_data.py  test_infer_latent_space_params.py  test_infer_tree_kernel.py  test_profile.py  test_sinm2022.py  test_sinm2022_data.py  test_train_nn.py  (+1 more)
(+14 files in other folders)
